--- a/index.html
+++ b/index.html
@@ -20,29 +20,22 @@
               <p style="text-align:center">
                 <name>Milind G. Padalkar</name>
               </p>
-              <p>I am a postdoc at <a href="https://pavis.iit.it/" target="_blank">PAVIS</a>, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a> (previously with <a href="https://www.vittoriomurino.com/" target="_blank" >Prof. Vittorio Murino</a>). My current work is broadly on defect detection in infrastructure elements using computer vision and machine learning. I am also interested in the topics of multi-exposure and multi-illumination fusion. Earlier I have worked on industrial projects focused on defect enhancement and detection mainly for combustion chamber tiles and textile yarn.
-			  <p>
-			  Prior to joining IIT, I worked as a senior research engineer at <a href="http://wwww.vehant.com" target="_blank">Vehant Technologies</a> (Mar. 2017 - Dec. 2018).
-			  </p>
+	      <p>Since April 2025, I have been working as a Technical Lead at <a href="https://www.infocusp.com/" target="_blank">Infocusp Innovations</a>.</p>
+              <p>From January 2019 to March 2025, I was a postdoctoral researcher at the <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> research line of the <a href="https://www.iit.it/" target="_blank">Istituto Italiano di Tecnologia (IIT)</a>, Genova, Italy, under the supervision of <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a> (and formerly with <a href="https://www.vittoriomurino.com/" target="_blank" >Prof. Vittorio Murino</a>). My research focused on computer vision and machine learning for defect detection, as well as multi-exposure and multi-illumination image fusion. I contributed primarily to industrial projects aimed at defect enhancement and detection in combustion chamber tiles, textile yarn, and infrastructure components.</p>
+	      <p>Prior to joining IIT, I worked as a senior research engineer at <a href="http://wwww.vehant.com" target="_blank">Vehant Technologies</a> (Mar. 2017 - Dec. 2018).</p>
+	      <p>I completed my Ph.D. in 2017 under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target="_blank">Prof. Manjunath V. Joshi</a> at <a href='https://www.daiict.ac.in/' target="_blank">DA-IICT, Gandhinagar, India</a>. Before that I did my M.Tech. in 2010 under the supervision of <a href='https://www.svnit.ac.in/maz/' target="_blank">Prof. M. A. Zaveri</a> at <a href='https://www.svnit.ac.in/' target="_blank">SVNIT, Surat, India</a> and B.E. in 2008 from <a href='http://www.famt.ac.in/' target="_blank">FAMT, Ratnagiri (The University of Mumbai)</a>.</p>
+              <p>I have co-authored the book titled "Digital Heritage Reconstruction Using Super-resolution and Inpainting" published under Synthesis Lectures on Visual Computing by Morgan & Claypool Publishers in December 2016.</p>
 			  </p>
 			  <!--
 			  <p>My Ph.D. thesis is titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction", for which I worked under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target="_blank">Prof. Manjunath V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (<a href='https://www.daiict.ac.in/' target="_blank">DA-IICT</a>), Gandhinagar, India.
 			  </p>
 			  <p>At DA-IICT, I have also worked as teaching assistant and as a junior research fellow (JRF) in the Indian Digital Heritage (<a href='http://digitalhampi.in/' target="_blank">IDH</a>)-Hampi project.
 			  </p>
-			  -->
-			  <p>I completed my Ph.D. in 2017 under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target="_blank">Prof. Manjunath V. Joshi</a> at <a href='https://www.daiict.ac.in/' target="_blank">DA-IICT, Gandhinagar, India</a>. Before that I did my M.Tech. in 2010 under the supervision of <a href='https://www.svnit.ac.in/maz/' target="_blank">Prof. M. A. Zaveri</a> at <a href='https://www.svnit.ac.in/' target="_blank">SVNIT, Surat, India</a> and B.E. in 2008 from <a href='http://www.famt.ac.in/' target="_blank">FAMT, Ratnagiri (The University of Mumbai)</a>.
-			  </p>
-			  <!--
 			  <p>I completed M.Tech. in Computer Engineering under the supervision of <a href='https://www.svnit.ac.in/maz/' target="_blank">Prof. M. A. Zaveri</a> at S. V. National Institute of Technology (<a href='https://www.svnit.ac.in/' target="_blank">SVNIT</a>), Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology (<a href='http://www.famt.ac.in/' target="_blank">FAMT</a>), Ratnagiri (The University of Mumbai) in 2008.
 			  </p>
 			  -->
-			  <!--
-			  <p>I have co-authored the book titled "Digital Heritage Reconstruction Using Super-resolution and Inpainting" published under Synthesis Lectures on Visual Computing by Morgan & Claypool Publishers in December 2016.
-              </p>
-			  -->
               <p style="text-align:center">
-                <a href="https://www.iit.it/people/milind-padalkar" target="_blank">my_page@IIT</a> &nbsp/&nbsp
+                <!--<a href="https://www.iit.it/people/milind-padalkar" target="_blank">my_page@IIT</a> &nbsp/&nbsp-->
                 <a href="https://www.linkedin.com/in/milind-padalkar-326b1511/" target="_blank">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.in/citations?user=D2tVZk8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/mgpadalkar" target="_blank">Twitter</a> &nbsp/&nbsp
@@ -62,7 +55,8 @@
                   <img alt="profile photo" src="files/mgpadalkar_2023_low_res.png" class="hoverZoomLink">
               </a>
               <p>
-                  <center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> <!--/ <a href="https://vgm.iit.it/" target="_blank">VGM</a>-->,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>
+                  <!--<center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> <!--/ <a href="https://vgm.iit.it/" target="_blank">VGM</a>-->,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>-->
+		  <center><i>TechLead</i> @ <a href="https://www.infocusp.com/ target="_blank">Infocusp Innovations</a>,<br>Pune, India</center>
               </p>
             </td>
           </tr>
