--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <img alt="profile photo" src="files/mgpadalkar_2023_low_res.png" class="hoverZoomLink">
               </a>
               <p>
-                  <!--<center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> <!--/ <a href="https://vgm.iit.it/" target="_blank">VGM</a>-->,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>-->
+                  <!--<center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a>,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>-->
 		  <center><i>TechLead</i> @ <a href="https://www.infocusp.com/ target="_blank">Infocusp Innovations</a>,<br>Pune, India</center>
               </p>
             </td>
